--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "subu",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.13",
     "nodemon": "^2.0.15"
   }
 }
