--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "author": "subu",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.0.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "graphql": "^15.7.2",
     "mongoose": "^6.0.13",
     "nodemon": "^2.0.15"
   }
