--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "subu",
   "license": "ISC",
   "dependencies": {
+    "@apollo/federation": "^0.29.1",
     "apollo-server-express": "^2.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
