added changes for document title

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-facebook-login": "^4.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-document-title": "2.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -46,6 +47,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
+    "react-document-title": "^2.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
