--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-facebook-login": "^4.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-document-title": "2.0.3",
     "web-vitals": "^1.1.2"
   },
