--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,13 @@
     "@testing-library/user-event": "^12.8.3",
     "graphql": "^16.0.1",
     "react": "^17.0.2",
+    "react-document-title": "2.0.3",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
-    "react-document-title": "2.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
